--- a/InventoryService.WebUI/web/index.html
+++ b/InventoryService.WebUI/web/index.html
@@ -83,12 +83,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-
+                           <a class="btn btn-primary" ng-click="" ng-show="newUpdateAvailable">{{newUpdateAvailable}} Updates Available</a>
                             <div id="jsGrid1"></div>
-
-
-                           
-
                         </div>
                     </div>
 
