--- a/InventoryService.WebUI/web/index.html
+++ b/InventoryService.WebUI/web/index.html
@@ -56,24 +56,11 @@
                 <a class="navbar-brand" href="#page-top">Inventory Service</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Refresh</a>
-                    </li>
-                </ul>
-            </div>-->
-            <!-- /.navbar-collapse -->
+          
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <br />
-    <br />
-    <br />
+ 
     <!-- Header -->
     <div class="container" ng-controller="ActorsCtrl">
         <div class="row">
@@ -82,8 +69,14 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12 text-center">
-                                <a class="btn btn-primary" ng-click="updateGrid()" ng-show="newUpdateAvailable">{{newUpdateAvailable}} Updates Available</a>
-                                <div id="jsGrid1"></div>
+                                <a class="btn btn-success" ng-click="updateGrid()" ng-show="newUpdateAvailable">{{newUpdateAvailable}} Updates Available</a>
+                                <a class="btn btn-primary" ng-click="realtime=!realtime" ng-show="realtime">Disable RealTime</a>
+                                <a class="btn btn-primary" ng-click="realtime=!realtime" ng-hide="realtime">Enable RealTime</a>
+                                <br />
+                                <div class="alert alert-warning">{{serverNotificationMessages}}</div>
+                                <br />
+                                <br />
+                                 <div id="jsGrid1"></div>
                             </div>
                         </div>
                     </div>
@@ -91,7 +84,7 @@
             </div>
         </div>
     </div>
-
+ 
     <!-- About Section -->
     <!-- Footer -->
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
