--- a/InventoryService.WebUI/web/index.html
+++ b/InventoryService.WebUI/web/index.html
@@ -69,10 +69,33 @@
                             <div class="col-lg-8 text-center">
 
                                 <br />
-                                <div id="jsGrid1"></div>
+                                <!--<div id="jsGrid1"></div>-->
+                                
+                                
+                                <div class="well">
+                                    <table class="table table-striped">
+                                        <thead>
+                                            <tr>
+                                                <th>ProductId</th>
+                                                <th>Quantity</th>
+                                                <th>Reserved</th>
+                                                <th>Holds</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="inv in realTimeInventories">
+                                                <td>{{inv.ProductId}}</td>
+                                                <td>{{inv.Quantity}}</td>
+                                                <td>{{inv.Reserved}}</td>
+                                                <td>{{inv.Holds}}</td>
+                                            </tr>
+
+                                        </tbody>
+                                    </table>
+                                </div>
+
                             </div>
                             <div class="col-lg-4">
-
                                 <div class="row">
                                     <br />
                                     <div>
@@ -86,9 +109,7 @@
                                     <br />
                                     <div class="well"><a class="btn btn-info">{{serverNotificationMessages||'...'}}</a></div>
                                     <div class="well"><a class="">{{messageSpeed}} messages/sec | Peak At {{peekMessageCount}}  messages/sec</a></div>
-
                                     <div class="well">
-
                                          Message Limit <input type="text" ng-model="maxMessageCount" />
                                         <br /><br />
                                         <ul class="list-group">
