update actor address, create inventory on ui

--- a/InventoryService.WebUI/web/index.html
+++ b/InventoryService.WebUI/web/index.html
@@ -71,7 +71,7 @@
                                  
                                     <br />
                                     <div class="well">
-                                        <pre> Current Item <span class="label label-success">{{current.ProductId}}</span></pre>
+                                        <pre> Current Item <input type="text" ng-model="current.ProductId" /></pre>
                                         <hr />
                                         Amount <input type="text" ng-model="quantityToPurchase" />
 
